<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_foodmenu"
        android:enabled="true"
        android:icon="@drawable/icon_menu"
        android:title="@string/menu" />

    <item
        android:id="@+id/menu_item_redeem"
        android:icon="@drawable/icon_redeem"
        android:title="@string/redeem" />

    <item
        android:id="@+id/menu_item_voucher"
        android:icon="@drawable/icon_coupon"
        android:title="@string/voucher" />

    <item
        android:id="@+id/menu_item_located"
        android:icon="@drawable/icon_location"
        android:title="@string/location" />


    <item
        android:id="@+id/menu_item_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/settings" />
</menu>